--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "homepage": "https://<PxMach>.github.io/<nom-du-repo>",
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
